<resources>
    <string name="app_name">Ashbox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ashbox AI</string>
    <string name="nav_header_subtitle">Version 1.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu strings -->
    <string name="menu_chat">Chat</string>
    <string name="menu_models">Models</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_licenses">Licenses</string>
    <string name="menu_history">history</string>

    <!-- Misc. -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy_me_a_coffee">Buy me a coffee</string>
    <string name="cd_send_message">Send Messages</string>
    <string name="message_hint">Ask any question</string>
    <string name="welcome_text">Welcome! \n Start a chat or load one from history.</string>
    <string name="read_more">Read More</string>

    <!-- Context Window Size Preference -->
    <string-array name="context_window_entries">
        <item>2048 Tokens</item>
        <item>4096 Tokens (Default)</item>
        <item>8192 Tokens</item>
        <item>16384 Tokens</item>
    </string-array>

    <string-array name="context_window_values">
        <item>2048</item>
        <item>4096</item>
        <item>8192</item>
        <item>16384</item>
    </string-array>
</resources>