<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/outline_chat_24"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_models"
            android:icon="@drawable/outline_models_24"
            android:title="@string/menu_models" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/outline_calendar_clock_24"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/outline_app_settings_alt_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_licenses"
            android:icon="@drawable/outline_article_24"
            android:title="@string/menu_licenses" />
    </group>
</menu>