<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_welcome">

    <fragment
        android:id="@+id/nav_welcome"
        android:name="com.nullform.ashbox.ui.welcome.WelcomeFragment"
        android:label="Welcome"
        tools:layout="@layout/fragment_welcome"/>

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.nullform.ashbox.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_models"
        android:name="com.nullform.ashbox.ui.models.ModelsFragment"
        android:label="Models"
        tools:layout="@layout/fragment_models"/>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.nullform.ashbox.ui.history.HistoryFragment"
        android:label="History"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.nullform.ashbox.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragments_settings" />

    <fragment
        android:id="@+id/nav_licenses"
        android:name="com.nullform.ashbox.ui.licenses.LicensesFragment"
        android:label="@string/menu_licenses"
        tools:layout="@layout/fragment_licenses" />

    <fragment
        android:id="@+id/webview"
        android:name="com.nullform.ashbox.ui.WebViewFragment"
        android:label="WebView"
        tools:layout="@layout/fragment_webview">
        <argument
            android:name="url"
            app:argType="string"
            android:defaultValue="about:blank" />
    </fragment>
</navigation>